--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html dir="ltr" lang="en">
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="height=device-height, initial-scale=1.0" />
+    <meta name="viewport" content="height=device-height, initial-scale=1.0, user-scalable=no" />
 
     <title>CyberGothic</title>
 
