Deleted more elements

--- a/index.html
+++ b/index.html
@@ -6,11 +6,6 @@
 
     <title>CyberGothic</title>
 
-    <script
-    src="https://code.jquery.com/jquery-3.6.0.js"
-    integrity="sha256-H+K7U5CnXl1h5ywQfKtSj8PCmoN9aaq30gDh27Xc0jk="
-    crossorigin="anonymous">
-    </script>
     <!--
     <script src="silhouette-parts/main/silhouette-coordinate-map.js" defer></script>
     <script src="silhouette-parts/side/silhouette-coordinate-map.js" defer></script>
@@ -36,7 +31,7 @@
 
     <script src="scripts/declarations.js" defer></script> 
 
-    <script src="scripts/main.js" defer></script> -->
+    <script src="scripts/main.js" defer></script> 
 
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
     <link rel="stylesheet" type="text/css" href="css/startScreenStyle.css"/>
@@ -46,6 +41,8 @@
     <link rel="stylesheet" type="text/css" href="css/winScreen.css"/>
     <link rel="stylesheet" type="text/css" href="css/loseScreen.css"/>
     <link rel="stylesheet" type="text/css" href="css/drawScreen.css"/>
+
+    -->
 </head>
 <body>
     <div style="position: absolute; top: 100px; left: 50px">
