--- a/index.html
+++ b/index.html
@@ -78,13 +78,27 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text player-hp-text">Life</div>
+                        <div class="player-bar-text player-hp-text">
+                            <div class="stat-name">
+                                Life
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text player-mana-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">
+                            <div class="stat-name">
+                                Mana
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -104,13 +118,27 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text player-hp-text">Life</div>
+                        <div class="player-bar-text player-hp-text">
+                            <div class="stat-name">
+                                Life
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text player-mana-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">
+                            <div class="stat-name">
+                                Mana
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -131,13 +159,27 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text player-hp-text">Life</div>
+                        <div class="player-bar-text player-hp-text">
+                            <div class="stat-name">
+                                Life
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text player-mana-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">
+                            <div class="stat-name">
+                                Mana
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -151,13 +193,27 @@
                         <div class="player-hp-bar">
                             <div class="player-hp-amount"></div>
                         </div>
-                        <div class="player-bar-text player-hp-text">Life</div>
+                        <div class="player-bar-text player-hp-text">
+                            <div class="stat-name">
+                                Life
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                     <div class='player-bar-container'>
                         <div class="player-mana-bar">
                             <div class="player-mana-amount"></div>
                         </div>
-                        <div class="player-bar-text player-mana-text">Mana</div>
+                        <div class="player-bar-text player-mana-text">
+                            <div class="stat-name">
+                                Mana
+                            </div>
+                            <div class="stat-value">
+
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <img alt='Player image' class="player-image" src='//:0' />
