Drawing defense icon

--- a/index.html
+++ b/index.html
@@ -304,6 +304,7 @@
             </div>-->
 
             <canvas id="battle-screen-summary-canvas">
+                <img src="images/shield.png" id="shield-icon" class="imported-data" alt="shield">
 
             </canvas>
 
