Drawing both silhouettes

--- a/index.html
+++ b/index.html
@@ -234,7 +234,7 @@
                     Choose body part to ATTACK
                 </div>
                 
-                <svg id='attack-selection-silhouette'>
+                <svg id='attack-selection-silhouette' class='body-selection'>
 
                  </svg>
             </div>
@@ -258,7 +258,7 @@
                 <img src="silhouette-parts/side/filled/torso-filled.png" id="torso-filled-main" class="imported-data" alt="silhouette part">
                 <img src="silhouette-parts/side/filled/head-filled.png" id="head-filled-main" class="imported-data" alt="silhouette part">
     
-                <svg id='defense-selection-silhouette'>
+                <svg id='defense-selection-silhouette' class='body-selection'>
 
                 </svg>
             </div>
