--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="scripts/screens/start-screen.js" defer></script> 
     <script src="scripts/screens/versus-screen.js" defer></script> 
     <script src="scripts/screens/battle-screen.js" defer></script> 
+    <script src="scripts/screens/summary-display.js" defer></script> 
     <script src="scripts/screens/win-screen.js" defer></script> 
     <script src="scripts/screens/lose-screen.js" defer></script> 
     <script src="scripts/screens/draw-screen.js" defer></script> 
@@ -270,7 +271,7 @@
                 
             </div>-->
 
-            <svg id="battle-screen-summary-display">
+            <svg id="battle-screen-summary-display" class='body-selection'>
 
             </svg>
 
