--- a/index.html
+++ b/index.html
@@ -271,9 +271,14 @@
                 
             </div>-->
 
-            <svg id="battle-screen-summary-display" class='body-selection'>
+            <div id="player-silhouettes">
+                <svg id="battle-screen-summary-player" class='body-selection'>
 
-            </svg>
+                </svg>
+                <svg id="battle-screen-summary-enemy" class='body-selection'>
+    
+                </svg>
+            </div>
 
             <input type="button" class='switch-button' id="battle-screen-next-turn" value="Next turn" />  
         </div>
