Grouping bodypart ui

--- a/index.html
+++ b/index.html
@@ -8,7 +8,8 @@
 
     <script src="silhouette-parts/main/silhouette-coordinate-map.js" defer></script>
     <script src="silhouette-parts/side/silhouette-coordinate-map.js" defer></script>
-    
+
+    <script src="scripts/game-config.js" defer></script> 
     <script src="scripts/html-elements.js" defer></script> 
 
     <script src="scripts/player.js" defer></script> 
