--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
     <script src="scripts/main.js" defer></script> 
 
     <link rel="stylesheet" type="text/css" href="css/style.css"/>
+    <link rel="stylesheet" type="text/css" href="css/silhouette.css"/>
     <link rel="stylesheet" type="text/css" href="css/startScreenStyle.css"/>
     <link rel="stylesheet" type="text/css" href="css/versusScreenStyle.css"/>
     <link rel="stylesheet" type="text/css" href="css/battleScreen.css"/>
