--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
 
     <title>CyberGothic</title>
 
+    <script src="silhouette-parts/body-parts-shoot-chances.js" defer></script>
     <script src="silhouette-parts/main/silhouette-coordinate-map.js" defer></script>
     <script src="silhouette-parts/side/silhouette-coordinate-map.js" defer></script>
 
