Worked with summary

--- a/index.html
+++ b/index.html
@@ -263,13 +263,12 @@
                 Summary
             </div>
 
-            <!--
-            <div id="battle-screen-summary-first-player" class="battle-screen-player-summary">
+            <div id="battle-screen-summary-player" class="battle-screen-player-summary">
                 
             </div>
-            <div id="battle-screen-summary-second-player" class="battle-screen-player-summary">
+            <div id="battle-screen-summary-enemy" class="battle-screen-player-summary">
                 
-            </div>-->
+            </div>
 
             <div id="player-silhouettes">
                 <svg id="battle-screen-summary-player-svg" class='body-selection'>
