Fixed health bars for side silhouette.

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
 
     <script src="silhouette-parts/body-parts-shoot-chances.js" defer></script>
     <script src="silhouette-parts/main/silhouette-coordinate-map.js" defer></script>
+    <script src="silhouette-parts/main/silhouette-bar-coordinate-map.js" defer></script>
     <script src="silhouette-parts/side/silhouette-coordinate-map.js" defer></script>
+    <script src="silhouette-parts/side/silhouette-bar-coordinate-map.js" defer></script>
 
     <script src="scripts/game-config.js" defer></script> 
     <script src="scripts/html-elements.js" defer></script> 
