Added color lerp.

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
 
     <title>CyberGothic</title>
 
+    <script src="scripts/lerp-color.js" defer></script> 
+
     <script src="silhouette-parts/body-parts-shoot-chances.js" defer></script>
     <script src="silhouette-parts/main/silhouette-coordinate-map.js" defer></script>
     <script src="silhouette-parts/main/silhouette-bar-coordinate-map.js" defer></script>
