Changed players' display positions on battle screen

--- a/index.html
+++ b/index.html
@@ -147,9 +147,10 @@
     </div>
 
     <div id="battle-screen" class="hidden">
-        <div id="players-bar">
+
+        <!--<div id="players-bar">
             <div id="player-left" class="player-display">
-                <!--<div class="player-stats">
+                <div class="player-stats">
                     <div class="player-name">
                         Player 1
                     </div>
@@ -179,7 +180,7 @@
                             </div>
                         </div>
                     </div>
-                </div>-->
+                </div>
                 <div class="player-name">
                     Player 1
                 </div>
@@ -190,7 +191,7 @@
                 <div class="player-name">
                     Player 2
                 </div>
-                <!--<div class="player-stats">
+                <div class="player-stats">
                     <div class="player-name">
                         Player 2
                     </div>
@@ -220,23 +221,28 @@
                             </div>
                         </div>
                     </div>
-                </div>-->
+                </div>
                 <img alt='Player image' class="player-image" src='//:0' />
             </div>
+        </div>-->
+
+        <div id="player-left" class="player-display">
+            <div class="player-name">
+                Player 1
+            </div>
+            <img alt='Player image' class="player-image" src='//:0' />
         </div>
 
+        <div id="player-right" class="player-display">
+            <div class="player-name">
+                Player 2
+            </div>
+            
+            <img alt='Player image' class="player-image" src='//:0' />
+        </div>
+
+
         <div id="battle-screen-selections">
-            <!--
-            <div id="battle-screen-selection-ability" class="hidden">
-                <div>
-                    Select abilities
-                </div>
-
-                <div id="battle-screen-selection-abilities-list">
-                    
-                </div>
-            </div>-->
-
             <div id="battle-screen-selection-body-attack" class="battle-screen-selection-body hidden">
                 <div>
                     Choose body part to ATTACK
