--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
     <script src="scripts/screens/win-screen.js" defer></script> 
     <script src="scripts/screens/lose-screen.js" defer></script> 
     <script src="scripts/screens/draw-screen.js" defer></script> 
-
+    
+    <script src="scripts/enemy-bot.js" defer></script> 
     <script src="scripts/declarations.js" defer></script> 
 
     <script src="scripts/main.js" defer></script> 
