Hide ui for silhouettes selection

--- a/index.html
+++ b/index.html
@@ -275,7 +275,7 @@
             </div>
 
             <div id='battle-screen-selection-switching'>
-                <input type="button" class='switch-button' id="battle-screen-button-back" value="Back" /> 
+                <input type="button" class='switch-button' id="battle-screen-button-back hidden" value="Back" /> 
                 <!--
                 <input type="button" class='switch-button' id="battle-screen-button-next" value="Next" /> -->
                 <input type="button" class='switch-button' id="battle-screen-button-finish-turn" value="Finish" /> 
