Changed markup for player display

--- a/index.html
+++ b/index.html
@@ -226,20 +226,21 @@
                 <img alt='Player image' class="player-image" src='//:0' />
             </div>
         </div>-->
-
-        <div id="player-left" class="player-display">
-            <div class="player-name">
-                Player 1
+        <div id='players-bar'>
+            <div id="player-left" class="player-display">
+                <div class="player-name">
+                    Player 1
+                </div>
+                <img alt='Player image' class="player-image" src='//:0' />
             </div>
-            <img alt='Player image' class="player-image" src='//:0' />
-        </div>
 
-        <div id="player-right" class="player-display">
-            <div class="player-name">
-                Player 2
+            <div id="player-right" class="player-display">
+                <div class="player-name">
+                    Player 2
+                </div>
+                
+                <img alt='Player image' class="player-image" src='//:0' />
             </div>
-            
-            <img alt='Player image' class="player-image" src='//:0' />
         </div>
 
 
